# hft_bot

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/exchange/: binary.rs  connection.rs  fix.rs  mod.rs
src/logging/: mod.rs
src/market_data/: aggregator.rs  mod.rs  order_book.rs  parser.rs
src/order_execution/: executor.rs  mod.rs  order_formatter.rs
src/strategy/: mod.rs  risk_management.rs  strategy_1.rs  strategy_2.rs
tests/: integration_test.rs
